Complete code reformat

--- a/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/public/index.html
+++ b/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/public/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+    <meta charset='utf8'>
+    <meta content='width=device-width' name='viewport'>
 
-	<title>Svelte app</title>
+    <title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
-	<link rel='stylesheet' href='bundle.css'>
+    <link href='favicon.png' rel='icon' type='image/png'>
+    <link href='bundle.css' rel='stylesheet'>
 </head>
 
 <body>
-	<script src='bundle.js'></script>
+<script src='bundle.js'></script>
 </body>
 </html>
